Fix text overflow bug on Chrome

--- a/src/css/_core.scss
+++ b/src/css/_core.scss
@@ -216,7 +216,6 @@ kbd {
   font-family: $font-stack-monospace;
   font-feature-settings: "zero" 1;
   font-size: 1em;
-  word-break: break-all;
 }
 
 var {
